# maumau-axum

./: .gitignore  Cargo.toml
src/: app_state.rs  auth_routes.rs  card.rs  db.rs  deck.rs  game.rs  game_routes.rs  lib.rs  lobby.rs  lobby_routes.rs  main.rs  player.rs  player_routes.rs
src/auth/: auth_routes.rs  mod.rs  user.rs
src/game/: card.rs  deck.rs  game.rs  game_handler_helpers.rs  game_routes.rs  lobby.rs  lobby_handler_helpers.rs  lobby_routes.rs  mod.rs  player.rs  player_routes.rs  router.rs
src/htmx_ui/: game_page.rs  index_page.rs  lobby_page.rs  mod.rs
src/json_api/: game_handlers.rs  lobby_handlers.rs  mod.rs
templates/: game.html  hello.html  index.html  lobby.html  player-list.html  register.html
tests/: quick_dev.rs
