[package]
name = "maumau_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["macros"] }
axum-login = "0.13.1"
axum-messages = "0.3.0"
dotenv = "0.15.0"
password-auth = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "sqlite",
    "time",
    "tls-native-tls",
] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "timeout", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-sessions-sqlx-store = { version = "0.10.0", features = ["sqlite"] }
time = "0.3.30"

[dev-dependencies]
anyhow = "1"
httpc-test = "0"
